--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -30,29 +30,39 @@ title: Saline Hallein - Schmiede
       <br /> 
       Email: andrea.zarfl {AT} salzburg.gv.at
       
-      <br />
+      <br /><br /><br />
       <strong> Preisträgerinnen: <strong/>
       <br />
            <br />
-           2015: Maria Morschitzky -  <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
+           2015: Maria Morschitzky 
+           <br /> <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
             <br />     <br />
-           2014: Christof Berthold & Marcuse Hafner - <a href="http://mitumback.xarch.eu/cargography/wordpress/">Car/go/graphy</a>
+           2014: Christof Berthold & Marcuse Hafner 
+           <br /> <a href="http://mitumback.xarch.eu/cargography/wordpress/">Car/go/graphy</a>
            <br />     <br />
-           2013: Andrea Maurer - <a href="http://www.studio-5.at/index.php?/upcoming/gespraechsgegenstaende/">Gesprächsgegenstände</a>
+           2013: Andrea Maurer 
+           <br /> <a href="http://www.studio-5.at/index.php?/upcoming/gespraechsgegenstaende/">Gesprächsgegenstände</a>
            <br />     <br />
-           2012: gold extra -  <a href="http://goldextra.com/de/from-darkness">From Darkness</a>
+           2012: gold extra 
+           <br /> <a href="http://goldextra.com/de/from-darkness">From Darkness</a>
            <br />     <br /> 
-           2011: Andreas Gröstlinger & Sebastian Kargl -  <a href="https://www.facebook.com/project.dialog">DIALOG</a>
+           2011: Andreas Gröstlinger & Sebastian Kargl 
+           <br /> <a href="https://www.facebook.com/project.dialog">DIALOG</a>
            <br />     <br />
-           2010: Bartholomäus Traubeck - <a href="http://traubeck.com/years/">YEARS</a>
+           2010: Bartholomäus Traubeck 
+           <br /> <a href="http://traubeck.com/years/">YEARS</a>
            <br />     <br />
-           2009: Korinna Lindinger & Karla Spiluttini - <a href="http://www.salzburg.gv.at/pdf-landespreis_medienkunst_2009.pdf">Schallzeichen</a> 
+           2009: Korinna Lindinger & Karla Spiluttini 
+           <br /> <a href="http://www.salzburg.gv.at/pdf-landespreis_medienkunst_2009.pdf">Schallzeichen</a> 
            <br />     <br /> 
-           2008: Gebhard Sengmüller - <a href="http://www.gebseng.com/08_a_parallel_image/">A Parallel Image</a>
+           2008: Gebhard Sengmüller 
+           <br /> <a href="http://www.gebseng.com/08_a_parallel_image/">A Parallel Image</a>
            <br />     <br />
-           2007: Robert Praxmarer & Reinhold Bidner - <a href="http://www.1n0ut.com/cpu/">CPU</a>
+           2007: Robert Praxmarer & Reinhold Bidner 
+           <br /> <a href="http://www.1n0ut.com/cpu/">CPU</a>
            <br />     <br />
-           2006: Claudia Rohrmoser & Marcel Schobel - <a href="http://www.salzburg.gv.at/pdf-preis_medienkunst_2006.pdf">SCHNITZEL WITH NOODLES AND CRISP APPLE STRUDEL</a>
+           2006: Claudia Rohrmoser & Marcel Schobel 
+           <br /> <a href="http://www.salzburg.gv.at/pdf-preis_medienkunst_2006.pdf">SCHNITZEL WITH NOODLES AND CRISP APPLE STRUDEL</a>
       </p><p>
         <br />
         
