--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -31,7 +31,7 @@ title: Saline Hallein - Schmiede
       Email: andrea.zarfl {AT} salzburg.gv.at
       
       <br /><br /><br />
-      <strong> Preisträgerinnen: <strong/>
+      <strong> Looking back: <strong/>
       <br />
            <br />
            2015: Maria Morschitzky 
