--- a/index.html
+++ b/index.html
@@ -1,106 +1,125 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width">
+---
+layout: default
+title: Schmiede - Playground of Ideas
+---
 
-    <!-- syntax highlighting CSS -->
-    <link rel="stylesheet" href="{{ site.base_url }}/css/syntax.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap.min.css">
-    <link rel="stylesheet" href="{{ site.base_url }}/css/bootstrap-theme.css">
-    <link rel="stylesheet" href="{{ site.base_url }}/css/main.css">
-
-    <script type="text/javascript" src="//use.typekit.net/cej7ijo.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-  </head>
-  <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container">
-        <div class="col-md-12">
-          <a href="{{ site.base_url }}/"><img class="logo" src="{{ site.base_url }}/images/logo.png" /></a>
-          <ul class="nav navbar-nav">
-            <li><a href="{{ site.base_url }}/">About</a></li>
-            <li><a href="http://schmiede.tumblr.com/" target="_BLANK">Blog</a></li>
-            <li><a href="{{ site.base_url }}/location/">Location</a></li>
-            <li><a href="{{ site.base_url }}/medienkunstpreis/">Medienkunstpreis</a></li>
-            <li><a href="{{ site.base_url }}/2016.html" class="btn btn-primary btn-lg yellow" style="font-weight: normal;">PROGRAM<b>16</b></a></li> 
-          </ul>
-        </div>
-      </div>
-    </nav>
-    <div class="main">
-      <div style="margin: 70px 30px 30px 30px;">
-        <h1 style="font-weight: normal;">SCHMIEDE<b>16</b>: AUSNAHMEZUSTAND <br /></h1>
-        <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">
-          
-        </a>
-        <div class="central-year-block">
-          <div class="col-md-4">
-            <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a>
-          </div>
-          <div class="col-md-4">
-            <a href="http://schmiede.tumblr.com/">BLOG</a>
-          </div>
-          <div style="clear: both;"></div>
-        </div>
-      </div>
-      {{ content }}
-      <div class="footer">
-        <div class="container">
-          <div class="col-md-4">
-            <h3>SCHMIEDE</h3>
-            <ul>
-              <li>
-                <a href="https://www.facebook.com/schmiedehallein">Facebook page</a>
-              </li>
-              <li>
-                <a href="http://www.flickr.com/groups/schmiede/">Flickr group</a>
-              </li>
-              <li>
-                <a href="https://twitter.com/SchmiedeHallein/">Twitter</a>
-              </li>
-              <li>
-                <a href="https://soundcloud.com/groups/schmiede">Soundcloud</a>
-              </li>
-              <li>
-                <a href="https://vimeo.com/groups/110342">Vimeo</a>
-              </li>
-              <li>
-                <a href="/partners.html">Partners</a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="col-md-4">
-            <h3>GET INVOLVED</h3>
-            <ul>
-              <li>
-                <a href="/apply/">Apply</a>
-              </li>
-              <li>
-                <a href="/medienkunstpreis/">Medienkunstpreis</a>
-              </li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <!--<img src="{{ site.base_url }}/images/anvil.png" />-->
-            <h3>OTHER</h3>
-            <ul>
-              <li>
-                <a href="{{ site.base_url }}/impressum.html">Impressum/Contact</a>
-              </li>
-              <li>
-                <a href="{{ site.base_url }}/tos.html">Therms of service</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+<div style="margin: 70px 30px 30px 30px;">
+  <h1 style="font-weight: normal;">SCHMIEDE<b>16</b>: AUSNAHMEZUSTAND <br /></h1>
+  <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">
+    
+  </a>
+  <div class="central-year-block">
+    <div class="col-md-4">
+      <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a>
     </div>
-    <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
-  </body>
-</html>
+    <div class="col-md-4">
+      <a href="http://schmiede.tumblr.com/">BLOG</a>
+    </div>
+    <div style="clear: both;"></div>
+  </div>
+</div>
 
+<div class="claim image-section" style="background-image: url(/images/main_image.jpg)">
+  <h1>PLAYGROUND OF IDEAS</h1>
+  <p>
+    Schmiede is a cooperative prototyping environment, focused on the arts, hacking
+    and entrepreneurship. Schmiede is a place where our ideas come to play.
+  </p>
+</div>
+
+<div class="white-text-section heading-text-section">
+  <h2>
+    WE MEET FOR 10 DAYS ...
+  </h2>
+  <p>
+    ... in order to get inspired, network, create, present, collaborate and exchange.
+  </p>
+</div>
+<div class="grey-text-section">
+  <div class="container">
+    <div class="col-md-7">
+      <iframe src="//player.vimeo.com/video/64489715" width="530px" height="300px"
+        frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+      </iframe>
+    </div>
+    <div class="col-md-5 lead">
+      Take a look and in 5:20 get a feeling of the atmosphere and scope of Schmiede. Meet some of the Smiths, see what they are like and what they have to say about Schmiede.
+
+      you can also listen to <a href="https://soundcloud.com/schmiede/sets/schmiedeinterviews">SmithInterviews on SoundCloud</a>
+
+    </div>
+  </div>
+</div>
+<div class="white-text-section">
+  <div class="container">
+    <div class="col-md-12">
+      <h3>WHAT PEOPLE SAY:</h3>
+      <ul class="testimonials">
+        {% for testimonial in site.data.testimonials %}
+          <li class="testimonial col-md-{{ testimonial.size }}">
+            <div class="circular image"
+              style="background-image: url(/images/testimonials/{{ testimonial.image }});"></div>
+            <div class="content">
+              <p>
+                <span class="quotes quotes-left">“</span>
+                {{ testimonial.testimonial }}
+                <span class="quotes quotes-right">”</span>
+              </p>
+              <span>{{ testimonial.name }} - {{ testimonial.title }}</span>
+              <div style="clear:both;"></div>
+            </div>
+          </li>
+        {% endfor %}
+      </ul>
+    </div>
+  </div>
+  <div style="clear: both;"></div>
+</div>
+<div class="location image-section">
+  <h2>
+    WE ARE IN HALLEIN ...
+  </h2>
+  <p>
+    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
+  </p>
+  <p>
+    <a href="/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
+  </p>
+</div>
+<div class="image-section" style="background-image: url(http://philippwassibauer.github.io/schmiede_web/images/present.jpg);">
+  <h2>
+    Got your attention?
+  </h2>
+  <p>
+    Join us for ten Schmiede days in late September.
+    <br /><br />
+    <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
+  </p>
+</div>
+<!--
+<div class="image-section" style="background-image: url(/images/invent_sports.jpg);">
+  <h2>
+    WE INVENT SPORTS ...
+  </h2>
+</div>
+<div class="image-section" style="background-image: url(/images/present.jpg);">
+  <h2>
+    WE PRESENT ...
+  </h2>
+</div>
+<div class="image-section" style="background-image: url(/images/work_together.jpg);">
+  <h2>
+    WE WORK TOGETHER ...
+  </h2>
+</div>
+<div class="image-section" style="background-image: url(/images/sax_brain.jpg);">
+  <h2>
+    WE CONNECT A SAX TO A BRAIN ...
+  </h2>
+</div>
+<div class="image-section" style="background-image: url(/images/vr_glasses.jpg);">
+  <h2>
+    WE DO VR ...
+  </h2>
+</div>-->
+  
