--- a/index.html
+++ b/index.html
@@ -3,21 +3,7 @@ layout: default
 title: Schmiede - Playground of Ideas
 ---
 
-<div style="margin: 70px 30px 30px 30px;">
-  <h1 style="font-weight: normal;">SCHMIEDE<b>16</b>: AUSNAHMEZUSTAND <br /></h1>
-  <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">
-    
-  </a>
-  <div class="central-year-block">
-    <div class="col-md-4">
-      <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a>
-    </div>
-    <div class="col-md-4">
-      <a href="http://schmiede.tumblr.com/">BLOG</a>
-    </div>
-    <div style="clear: both;"></div>
-  </div>
-</div>
+
 
 <div class="claim image-section" style="background-image: url(/images/main_image.jpg)">
   <h1>PLAYGROUND OF IDEAS</h1>
@@ -26,6 +12,21 @@ title: Schmiede - Playground of Ideas
     and entrepreneurship. Schmiede is a place where our ideas come to play.
   </p>
 </div>
+
+<div class="grey-text-section">
+  <div class="container">
+    <div class="col-md-7">
+      <iframe width="530" height="376" src="//e.issuu.com/embed.html#0/38495734" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscree></iframe>
+    </div>
+    <div class="col-md-5 lead">
+       <h2 style="font-weight: normal;">SCHMIEDE<b>16</b>: AUSNAHMEZUSTAND <br /></h2>
+       <p>15.-23. September</p>
+       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a>
+       <a href="http://schmiede.tumblr.com/">BLOG</a>
+    </div>
+  </div>
+</div>
+
 
 <div class="white-text-section heading-text-section">
   <h2>
