--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@ title: Schmiede - Playground of Ideas
     </div>
     <div class="col-md-5 lead">
        <h2 style="font-weight: normal;">SCHMIEDE<b>16</b>: AUSNAHMEZUSTAND <br /></h2>
-       <p>15.-23. September</p>
-       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a>
+       <p>14.-24. September</p>
+       <p>Hallein, Austria</p>
+       <br />
+       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a> | 
        <a href="http://schmiede.tumblr.com/">BLOG</a>
     </div>
   </div>
