--- a/apply/index.html
+++ b/apply/index.html
@@ -33,8 +33,8 @@ title: Schmiede Application
                 Pernerinsel in Hallein, Salzburg, Austria.
               </a>
             </dd>
-            <dt>Application fee:</dt>
-            <dd>50Eur (when accepted)</dd>
+            <dt>ApplicationProcessingFee:</dt>
+            <dd>65Eur (when accepted)</dd>
             <dt>Application closes:</dt>
             <dd>May 31st</dd>
             <dt>Application confirmation:</dt>
