--- a/partners.html
+++ b/partners.html
@@ -6,19 +6,19 @@ title: Partners - Schmiede
 <h2>SchmiedeFörderer</h2>
 <div>
   <div style="text-align:center;">
-    <img src="{{ site.base_url }}/images/partners/SCH_Foerderer_0916.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/bmuk.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/stadt-hallein.png" class="fimg" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/inspiranto.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/show2go.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/mackie.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/vogrin.png" class="fimg" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/trumer.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/epamedia.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/hallein.png" class="fimg" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/iriedaily.png" class="fimg" alt="" border="0"><br><br>
+    <img src="{{ site.base_url }}/images/partners/SCH_Foerderer_0916.png" class="fimg" alt="" border="0" width="1000px">
+  </div>
+</div>
+
+<div>
+  <div style="text-align:center;">
+    <img src="{{ site.base_url }}/images/partners/SCH_Unterstuetzer_0916.png" class="fimg" alt="" border="0" width="1000px">
+  </div>
+</div>
+
+<div>
+  <div style="text-align:center;">
+    <img src="{{ site.base_url }}/images/partners/SCH_Partner_0916.png" class="fimg" alt="" border="0" width="1000px">
   </div>
 </div>
 
@@ -26,29 +26,6 @@ title: Partners - Schmiede
 <h2>ProjektFörderer</h2>
 <div>
   <div style="text-align:center;width:1000px;margin-left:0px;">
-    <img src="{{ site.base_url }}/images/partners/europe-culture.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/land-salzburg2.png" class="fimg2" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/fachhochschule.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/subnet.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/itg.png" class="fimg2" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/pro-arte.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/ik.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/mmt.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/vvvv.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/cadet.png" class="fimg2" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/resolume.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/madmappers.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/module8.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/isadora.png" class="fimg2" alt="" border="0">
-    <br>
-    <img src="{{ site.base_url }}/images/partners/estrela.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/kulturforum.png" class="fimg2" alt="" border="0">
-    <img src="{{ site.base_url }}/images/partners/radiofabrik.png" alt="" border="0" class="fimg2" height="131" width="200">
-    <img src="{{ site.base_url }}/images/partners/fs1.png" alt="" border="0" class="fimg2" height="131" width="200">
-    <br>
-    <br>
+    <img src="{{ site.base_url }}/images/partners/SCH_ProjektUnterstuetzer_0916.png" class="fimg" alt="" border="0" width="1000px">
   </div>
 </div>
