--- a/partners.html
+++ b/partners.html
@@ -3,27 +3,30 @@ layout: content
 title: Partners - Schmiede
 ---
 
-<h2>SchmiedeFörderer</h2>
+<h2>Förderer</h2>
 <div>
   <div style="text-align:center;">
     <img src="{{ site.base_url }}/images/partners/SCH_Foerderer_0916.png" class="fimg" alt="" border="0" width="1000px">
   </div>
 </div>
-
+<br />
+<h2>Unterstützer</h2>
 <div>
   <div style="text-align:center;">
     <img src="{{ site.base_url }}/images/partners/SCH_Unterstuetzer_0916.png" class="fimg" alt="" border="0" width="1000px">
   </div>
 </div>
+<br />
 
+<h2>Partner</h2>
 <div>
   <div style="text-align:center;">
     <img src="{{ site.base_url }}/images/partners/SCH_Partner_0916.png" class="fimg" alt="" border="0" width="1000px">
   </div>
 </div>
+<br />
 
-
-<h2>ProjektFörderer</h2>
+<h2>Projekt Unterstützer</h2>
 <div>
   <div style="text-align:center;width:1000px;margin-left:0px;">
     <img src="{{ site.base_url }}/images/partners/SCH_ProjektUnterstuetzer_0916.png" class="fimg" alt="" border="0" width="1000px">
