--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ title: Schmiede - Playground of Ideas
           14.-24. September <br /> 
           Hallein, Austria
        </p>
-       <br />
+      <!-- <br />
        <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a> | 
-       <a href="http://schmiede.tumblr.com/">BLOG</a>
+       <a href="http://schmiede.tumblr.com/">BLOG</a>-->
     </div>
   </div>
 </div>
