--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Schmiede - Playground of Ideas
     and entrepreneurship. Schmiede is a place where our ideas come to play.
   </p>
 </div>
-
+   <!--
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
@@ -24,12 +24,12 @@ title: Schmiede - Playground of Ideas
           14.-24. September <br /> 
           Hallein, Austria
        </p>
-      <!-- <br />
+    <br />
        <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a> | 
-       <a href="http://schmiede.tumblr.com/">BLOG</a>-->
+       <a href="http://schmiede.tumblr.com/">BLOG</a>
     </div>
   </div>
-</div>
+</div>-->
 
 
 <div class="white-text-section heading-text-section">
