--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Schmiede - Playground of Ideas
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
-      <iframe src="//player.vimeo.com/video/64489715" width="530px" height="300px"
+      <iframe id="schmiede-video" src="//player.vimeo.com/video/64489715" width="530px" height="300px"
         frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
       </iframe>
     </div>
