--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ title: Schmiede - Playground of Ideas
 </div>
 <div class="white-text-section">
   <div class="container">
-    <div class="col-md-12">
+    <div class="col-md-12 testimonial-container">
       <h3>WHAT PEOPLE SAY:</h3>
       <ul class="testimonials">
         {% for testimonial in site.data.testimonials %}
