--- a/apply/index.html
+++ b/apply/index.html
@@ -50,7 +50,7 @@ title: Schmiede Application
   <div class="container">
     <div class="col-md-9 col-md-offset-1">
       <p class="lead">
-        The program of Schmiede15 is work in progress till midsummer.
+        The program of Schmiede is work in progress till midsummer.
         The reason for this is that what actually will happens depends heavily on
         the projects and people participating each year. <br /><br />
         <strong>Let us know about  public events you want in the application or <a href="/impressum.html">get in touch</a></strong>
@@ -59,18 +59,18 @@ title: Schmiede Application
  <div data-configid="3084599/34031483" style="width:525px; height:373px;" class="issuuembed"></div><script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>      
  </p>
 
-      <h2 style="margin-top: 40px;">Schmiede phases</h2>
+      <h2 style="margin-top: 40px;">SchmiedeDays</h2>
       <p class="lead">
-        Day 1 - Arrival and first presentation day<br />
-        Day 2 - Impulse: SchmiedeTalks<br />
-        Day 3 + 4 - Impulse and Learning: SchmiedeLabWorkshopDays<br />
-        Day 5 - Relax, share and network<br />
-        Day 6 + 8 - WorkPhase<br />
-        Day 7 - SchmiedeWorkShow sign up day. The plan for the Workshow must be finalized.<br />
-        Day 8 - Setting up, testing and cleaning up what is not needed on Saturday.<br />
-        Day 8 - SalzburgMediaArtAward will be presented followed by SmithPerformances.<br />
-        Day 9 - SchmiedeWorkShow day (will be hectic).<br />
-        Day 10 - Last Breakfast and 'Auf Wiedersehen'
+       Day 1  (We.)           - Arrival and first presentation day,SalzburgMediaArtGrant, Opening <br />
+       Day 2 - 4 (Th. - Sa.) - Impulses, Meeting and Learning: Talks, Workshops, Performences and Party etc. <br />
+       Day 5  (Su.)           - TransitionDay <br />
+       Day 6 - 9 (Mo.-Th.)   - WorkPhase <br />
+       Day 7  (Tu.)           - At 17:00 general SchmiedeWorkShowMeeting <br />
+       Day 8  (We.)           - At 15:00 the SchmiedeWorkShowForm must be completed. <br />
+       Day 9  (Th.)           - The plan for the Workshow is finalized and printed. Setting up, testing and cleaning up what is not needed for Friday.<br />
+       Day 10 (Fr.)           - SetUp and Present day. Do whatever possible on another day. At 19:00 SchmiedeWorkShow opens it's doors. Lock your equipment once you are done.<br />
+       Day 11 (Sa.)           - Last Breakfast, Clean out (no trace left behind) and 'Auf Wiedersehen' <br />
+       
       </p>
     </div>
   </div>
