--- a/apply/index.html
+++ b/apply/index.html
@@ -62,13 +62,15 @@ title: Schmiede Application
       <h2 style="margin-top: 40px;">SchmiedeDays</h2>
       <p class="lead">
        Day 1  (We.)           - Arrival and first presentation day,SalzburgMediaArtGrant, Opening <br />
-       Day 2 - 4 (Th. - Sa.) - Impulses, Meeting and Learning: Talks, Workshops, Performences and Party etc. <br />
+       Day 2 - 4 (Th. - Sa.)  - Impuls and Learning: Talks, Workshops, Sharing, Performences etc. <br />
        Day 5  (Su.)           - TransitionDay <br />
-       Day 6 - 9 (Mo.-Th.)   - WorkPhase <br />
+       Day 6 - 9 (Mo.-Th.)    - WorkPhase <br />
        Day 7  (Tu.)           - At 17:00 general SchmiedeWorkShowMeeting <br />
        Day 8  (We.)           - At 15:00 the SchmiedeWorkShowForm must be completed. <br />
-       Day 9  (Th.)           - The plan for the Workshow is finalized and printed. Setting up, testing and cleaning up what is not needed for Friday.<br />
-       Day 10 (Fr.)           - SetUp and Present day. Do whatever possible on another day. At 19:00 SchmiedeWorkShow opens it's doors. Lock your equipment once you are done.<br />
+       Day 9  (Th.)           - The plan for the Workshow is finalized and printed.  <br />
+       Day 9  (Th.)           - Setting up, testing and cleaning up as well as out what is not needed for Friday.<br />
+       Day 10 (Fr.)           - SetUp and Present day. Do whatever possible on another day.  <br />
+       Day 10 (Fr.)           - At 19:00 SchmiedeWorkShow opens doors. Lock your equipment once you are done.<br />
        Day 11 (Sa.)           - Last Breakfast, Clean out (no trace left behind) and 'Auf Wiedersehen' <br />
        
       </p>
