--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Schmiede - Playground of Ideas
     and entrepreneurship. Schmiede is a place where our ideas come to play.
   </p>
 </div>
-   <!--
+   
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
@@ -25,11 +25,11 @@ title: Schmiede - Playground of Ideas
           Hallein, Austria
        </p>
     <br />
-       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiede16_programm">PROGRAMM</a> | 
+       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
        <a href="http://schmiede.tumblr.com/">BLOG</a>
     </div>
   </div>
-</div>-->
+</div>
 
 
 <div class="white-text-section heading-text-section">
