--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Schmiede - Playground of Ideas
       <iframe width="530" height="376" src="//e.issuu.com/embed.html#0/38495734" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscree></iframe>
     </div>
     <div class="col-md-5 lead">
-       <h2 style="font-weight: normal;">SCHMIEDE<b>17</b>: > <br Y></h2>
+       <h2 style="font-weight: normal;">SCHMIEDE<b>17</b>: > <br>Y</h2>
        <p>
           14.-24. September <br /> 
           Hallein, Austria
