--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@ title: Schmiede - Playground of Ideas
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
-      <iframe width="530" height="376" src="//e.issuu.com/embed.html#0/38495734" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscree></iframe>
+      <div data-configid="2046366/53260519" style="width:100%; height:376px;" class="issuuembed"></div>
+      <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
     <div class="col-md-5 lead">
-       <h2 style="font-weight: normal;">SCHMIEDE<b>17</b>: > <br>Y</h2>
+       <h2 style="font-weight: normal;">SCHMIEDE<b>17</b>: Y</h2>
        <p>
-          14.-24. September <br /> 
+          20.-30. September <br /> 
           Hallein, Austria
        </p>
     <br />
