--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ title: Schmiede - Playground of Ideas
   <h2>
     Got your attention?
   </h2>
-  <!-- <p>
+<p>
     Join us for ten Schmiede days in late September.
     <br /><br />
     <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
@@ -107,7 +107,7 @@ title: Schmiede - Playground of Ideas
   <h2>
     WE INVENT SPORTS ...
   </h2>
-</div> -->
+</div> 
 <div class="image-section" style="background-image: url(/images/present.jpg);">
   <h2>
     WE PRESENT ...
