--- a/index.html
+++ b/index.html
@@ -96,12 +96,12 @@ title: Schmiede - Playground of Ideas
   <h2>
     Got your attention?
   </h2>
-<p>
+<!-- <p>
     Join us for ten Schmiede days in late September.
     <br /><br />
     <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
   </p>
-</div>
+</div> -->
 <!--
 <div class="image-section" style="background-image: url(/images/invent_sports.jpg);">
   <h2>
