--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@ title: Schmiede - Playground of Ideas
     <br /><br />
     <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a>
   </p>
-</div> -->
-<!--
+</div> 
+
 <div class="image-section" style="background-image: url(/images/invent_sports.jpg);">
   <h2>
     WE INVENT SPORTS ...
