--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ title: Schmiede - Playground of Ideas
     Got your attention?
   </h2>
  <p>
-    Join us for ten Schmiede days in late September.
+    Join us for ten Schmiede days, August/September.
     <br /><br />
    <!-- <a href="/apply/" class="btn btn-primary btn-lg yellow">APPLICATION</a> -->
   </p>
