--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -20,7 +20,7 @@ title: Saline Hallein - Schmiede
         project/team will participate at the current Schmiede for inspiration,
         development and networking and will be presented during the next Schmiede.
           <br /><br />
-        <a href="http://www.salzburg.gv.at/2434-cdneu_flyer_a5_medienpreis_2016.pdf"><strong>Link to detailed information for applicants (German)</a></strong>
+        <a href="https://www.salzburg.gv.at/kultur_/Seiten/jahresstipendiummedienkunst.aspx"><strong>Link to detailed information for applicants (German)</a></strong>
       <br />   <br /> 
       Direct contact in case of detailed questions: 
       <br /> 
@@ -33,7 +33,15 @@ title: Saline Hallein - Schmiede
       <br /><br /><br />
       <strong> Looking back: <strong/>
       <br />
-           <br />
+           <br /><br />
+           2017: KLITCLIQUE 
+           <br /> <a href="https://klitclique.wordpress.com/">KLITCLIQUE</a>
+         <br /> <a href="https://www.sn.at/salzburg/chronik/klitclique-erhaelt-jahresstipendium-fuer-medienkunst-18080257">KLITCLIQUE SN</a>
+            <br />  <br /> 
+           2015: Christoph Janka
+           <br /> <a href="http://www.chrisjanka.at/"> Chris Janka</a>
+          <br /> <a href="https://www.musicaustria.at/jahresstipendium-an-christoph-janka/"> Chris Janka mica</a>
+            <br />  
            2015: Maria Morschitzky 
            <br /> <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
             <br />     <br />
