--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -14,7 +14,7 @@ title: Saline Hallein - Schmiede
         Hallein, supports (a) media art artist(s) by providing a <strong>10.000Eur grant</strong> for a proposed project.
         <br />
         The grant is intended to enable the realization of the proposed project within the coming year.
-        Applicants need to have a representable biographical connection with the country of Salzburg. Project proposal must reach <strong>deadline is Feb 28th.</strong>
+        Applicants need to have a representable biographical connection with the country of Salzburg.
         <br /><br />
         The winning
         project/team will participate at the current Schmiede for inspiration,
