--- a/medienkunstpreis/index.html
+++ b/medienkunstpreis/index.html
@@ -35,12 +35,10 @@ title: Saline Hallein - Schmiede
       <br />
            <br /><br />
            2017: KLITCLIQUE 
-           <br /> <a href="https://klitclique.wordpress.com/">KLITCLIQUE</a>
-         <br /> <a href="https://www.sn.at/salzburg/chronik/klitclique-erhaelt-jahresstipendium-fuer-medienkunst-18080257">KLITCLIQUE SN</a>
-            <br />  <br /> 
+           <br /> <a href="https://klitclique.wordpress.com/">KLITCLIQUE</a><br />  <br /> 
            2015: Christoph Janka
            <br /> <a href="http://www.chrisjanka.at/"> Chris Janka</a>
-          <br /> <a href="https://www.musicaustria.at/jahresstipendium-an-christoph-janka/"> Chris Janka mica</a>
+          <br />
             <br />  
            2015: Maria Morschitzky 
            <br /> <a href="http://service.salzburg.gv.at/lkorrj/Index?cmd=detail_ind&nachrid=55308">The World as Material / Compositions for a Room</a>
