--- a/apply/index.html
+++ b/apply/index.html
@@ -26,7 +26,7 @@ title: Schmiede Application
         <p>
           <dl class="dl-horizontal lead">
             <dt>When:</dt>
-            <dd>late September (2017: 20th - 30th)</dd>
+            <dd>2018: August 29th - September 7th)</dd>
             <dt>Where:</dt>
             <dd>
               <a href="https://maps.google.com/maps/ms?msa=0&msid=209371383360961785408.0004ab076cae1500b5f3e&dg=feature">
