--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@ title: Schmiede - Playground of Ideas
       <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
     <div class="col-md-5 lead">
-       <h2 style="font-weight: normal;">SCHMIEDE<b>17</b>: Y</h2>
+       <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2>
        <p>
-          20.-30. September <br /> 
+          August 29. - September 7. <br /> 
           Hallein, Austria
        </p>
     <br />
-       <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
-       <a href="http://schmiede.tumblr.com/">BLOG</a>
+       <!-- --><a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
+       <a href="http://schmiede.tumblr.com/">BLOG</a>-->
     </div>
   </div>
 </div>
