--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Schmiede - Playground of Ideas
           Hallein, Austria
        </p>
     <br />
-       <!-- --><a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
+       <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
        <a href="http://schmiede.tumblr.com/">BLOG</a>-->
     </div>
   </div>
