--- a/index.html
+++ b/index.html
@@ -22,12 +22,16 @@ title: Schmiede - Playground of Ideas
     <div class="col-md-5 lead">
        <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2>
        <p>
-          August 29. - September 7. <br /> 
-          Hallein, Austria
+          August 29th - September 7th <br /> 
+          Hallein, Austria<br /> <br /> 
+         
+         The Schmiede18 program will be communicated in August.<br /> 
+ Structurally it will be identical to the past <a target="_BLANK" href="https://issuu.com/schmiede">programs</a>. <br /> 
+Contentwise it will emerge according to the needs and ideas of the participating Smiths. 
        </p>
     <br />
        <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
-       <a href="http://schmiede.tumblr.com/">BLOG</a>-->
+       <a href="http://schmiede.tumblr.com/">BLOG</a> -->
     </div>
   </div>
 </div>
