--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@ title: Schmiede - Playground of Ideas
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
          
-         The Schmiede18 program will be communicated in August.<br /> 
- Structurally it will be identical to the past <a target="_BLANK" href="https://issuu.com/schmiede">programs</a>. <br /> 
-Contentwise it will emerge according to the needs and ideas of the participating Smiths. 
+         The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
+         will have the same be structure as in the past. The details will be communicated in August. The general flow: Inspiration, Work, Presentation.
        </p>
     <br />
        <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
