--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: Schmiede - Playground of Ideas
           Hallein, Austria<br /> <br /> 
          
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
-         will have the same be structure as in the past. The details will be communicated in August. The general flow: Inspiration, Work, Presentation.
+         will have the same be structure as in the past. The details will be communicated in August. <br /> The general flow: Inspiration, Work, Presentation.
        </p>
     <br />
        <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
