--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@ title: Schmiede - Playground of Ideas
           Hallein, Austria<br /> <br /> 
          
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
-         will have the same be structure as in the past. The details will be communicated in August. <br /> The general flow: Inspiration, Work, Presentation.
+         will have the same basic flow structure as in the past, but with changing labs and projects. 
+As this is a liquid process the details cannot be communicated before August. The general flow: Inspiration, Work, Presentation.
        </p>
     <br />
        <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
