--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ title: Schmiede - Playground of Ideas
          
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
-As this is a liquid process the details cannot be communicated before August. The general flow: Inspiration, Work, Presentation.
+As this is a liquid process the details cannot be communicated before August. The general flow at Schmiede: Inspiration, Work, Presentation.
        </p>
     <br />
        <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
