--- a/apply/index.html
+++ b/apply/index.html
@@ -10,7 +10,7 @@ title: Schmiede Application
   <div class="container" style="margin-top: 40px;">
     <div class="col-md-9 col-md-offset-1">
       <p class="lead">
-        Since 2003, every year an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
+        Since 2003, every year, an abandoned <a href="/location/">industrial salt refinery</a> on an island in Hallein,
         Austria opens up for ten days to host around 300 Smiths and their ideas.
         We physically gather in order to get inspired, network, create,
         present and share. Schmiede provides a basic cooperative prototyping
