--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ title: Schmiede - Playground of Ideas
 As this is a liquid process the details cannot be communicated before August. The general flow at Schmiede: Inspiration, Work, Presentation.
        </p>
     <br />
-       <!-- <a target="_BLANK" href="https://issuu.com/schmiede/docs/schmiedey_programm2017">PROGRAMM</a> | 
+       <!-- <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a> | 
        <a href="http://schmiede.tumblr.com/">BLOG</a> -->
     </div>
   </div>
