--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ title: Schmiede - Playground of Ideas
 <div class="grey-text-section">
   <div class="container">
     <div class="col-md-7">
+          <!-- 
       <div data-configid="2046366/53260519" style="width:100%; height:376px;" class="issuuembed"></div>
       <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
-    <div class="col-md-5 lead">
+    <div class="col-md-5 lead">-->
        <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2>
        <p>
           August 29th - September 7th <br /> 
