--- a/index.html
+++ b/index.html
@@ -13,25 +13,25 @@ title: Schmiede - Playground of Ideas
   </p>
 </div>
    
-<div class="grey-text-section">
-  <div class="container">
+<div class="grey-text-section heading-text-section">
+      <!-- <div class="container">
     <div class="col-md-7">
-          <!-- 
+      
       <div data-configid="2046366/53260519" style="width:100%; height:376px;" class="issuuembed"></div>
       <script type="text/javascript" src="//e.issuu.com/embed.js" async="true"></script>
     </div>
     <div class="col-md-5 lead">-->
-       <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2>
+       <h2 style="font-weight: normal;">SCHMIEDE<b>18</b>: noplan</h2> 
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
-         
+          <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
 As this is a liquid process the details cannot be communicated before August. The general flow at Schmiede: Inspiration, Work, Presentation.
        </p>
     <br />
-       <!-- <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a> | 
+      <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a> | 
        <a href="http://schmiede.tumblr.com/">BLOG</a> -->
     </div>
   </div>
