--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ title: Schmiede - Playground of Ideas
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
+            <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a><br /> 
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
