--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ title: Schmiede - Playground of Ideas
   </p>
 </div>
    
-<div class="grey-text-section heading-text-section">
+<div class="white-text-section heading-text-section">
       <!-- <div class="container">
     <div class="col-md-7">
       
@@ -25,8 +25,8 @@ title: Schmiede - Playground of Ideas
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
-            <a target="_BLANK" href="http://bit.ly/schmiede18issuu">PROGRAMM</a>
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">PROGRAM</a><br /> 
+            <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm</a> --
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program</a><br /> 
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
@@ -37,16 +37,6 @@ As this is a liquid process the details cannot be communicated before August. Th
        <a href="http://schmiede.tumblr.com/">BLOG</a> -->
     </div>
   </div>
-</div>
-
-
-<div class="white-text-section heading-text-section">
-  <h2>
-    WE MEET FOR 10 DAYS ...
-  </h2>
-  <p>
-    ... in order to get inspired, network, create, present, collaborate and exchange.
-  </p>
 </div>
 <div class="grey-text-section">
   <div class="container">
@@ -63,6 +53,16 @@ As this is a liquid process the details cannot be communicated before August. Th
     </div>
   </div>
 </div>
+
+<div class="white-text-section heading-text-section">
+  <h2>
+    WE MEET FOR 10 DAYS ...
+  </h2>
+  <p>
+    ... in order to get inspired, network, create, present, collaborate and exchange.
+  </p>
+</div>
+
 <div class="white-text-section">
   <div class="container">
     <div class="col-md-12 testimonial-container">
@@ -70,8 +70,8 @@ As this is a liquid process the details cannot be communicated before August. Th
       <ul class="testimonials">
         {% for testimonial in site.data.testimonials %}
           <li class="testimonial col-md-{{ testimonial.size }}">
-            <div class="circular image"
-              style="background-image: url(/images/testimonials/{{ testimonial.image }});"></div>
+             <!--   <div class="circular image"
+              style="background-image: url(/images/testimonials/{{ testimonial.image }});"></div> -->
             <div class="content">
               <p>
                 <span class="quotes quotes-left">“</span>
