--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ title: Schmiede - Playground of Ideas
        <p>
           August 29th - September 7th <br /> 
           Hallein, Austria<br /> <br /> 
-            <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm</a> --
-         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program</a><br /> 
+         <a target="_BLANK" href="http://bit.ly/schmiede18issuu">Programm (German)</a> - 
+         <a target="_BLANK" href="https://schmiede.tumblr.com/tagged/english">Program </a><br /> 
           <!-- 
          The <a target="_BLANK" href="https://issuu.com/schmiede">SchmiedeProgram</a> 
          will have the same basic flow structure as in the past, but with changing labs and projects. 
@@ -63,6 +63,18 @@ As this is a liquid process the details cannot be communicated before August. Th
   </p>
 </div>
 
+<div class="location image-section">
+  <h2>
+    WE ARE IN HALLEIN ...
+  </h2>
+  <p>
+    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
+  </p>
+  <p>
+    <a href="/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
+  </p>
+</div>
+
 <div class="white-text-section">
   <div class="container">
     <div class="col-md-12 testimonial-container">
@@ -88,17 +100,7 @@ As this is a liquid process the details cannot be communicated before August. Th
   </div>
   <div style="clear: both;"></div>
 </div>
-<div class="location image-section">
-  <h2>
-    WE ARE IN HALLEIN ...
-  </h2>
-  <p>
-    ... a beautiful location and surroundings helps to focus on your projects and recharge creatively.
-  </p>
-  <p>
-    <a href="/location" class="btn btn-primary btn-lg yellow">MORE INFO</a>
-  </p>
-</div>
+
 <div class="image-section" style="background-image: url(http://philippwassibauer.github.io/schmiede_web/images/present.jpg);">
   <h2>
     Got your attention?
